infra/frontro/blazn-test/networkpolicy-api-dev-email-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-dev-email-egress
  namespace: blazn-test
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 104.16.0.0/13
    - ipBlock:
        cidr: 172.64.0.0/13
  podSelector:
    matchLabels:
      app: blazn-api-dev
  policyTypes:
  - Egress
